@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: iTermController.m,v 1.64 2006-11-23 02:08:03 yfabian Exp $
+// $Id: iTermController.m,v 1.65 2007-01-12 23:15:47 yfabian Exp $
 /*
  **  iTermController.m
  **
@@ -353,6 +353,30 @@ static int _compareEncodingByLocalizedName(id a, id b, void *unused)
         term = theTerm;
 
 	[term addNewSession: aDict];
+}
+
+- (void) launchBookmark: (NSDictionary *) bookmarkData inTerminal: (PseudoTerminal *) theTerm withCommand: (NSString *)command
+{
+    PseudoTerminal *term;
+    NSDictionary *aDict;
+	
+	aDict = bookmarkData;
+	if(aDict == nil)
+		aDict = [[ITAddressBookMgr sharedInstance] defaultBookmarkData];
+	
+	// Where do we execute this command?
+    if(theTerm == nil)
+    {
+        term = [[PseudoTerminal alloc] init];
+		[term initWindowWithAddressbook: aDict];
+		[self addInTerminals: term];
+		[term release];
+		
+    }
+    else
+        term = theTerm;
+	
+	[term addNewSession: aDict withCommand: command];
 }
 
 - (void) launchBookmark: (NSDictionary *) bookmarkData inTerminal: (PseudoTerminal *) theTerm withURL: (NSString *)url
